compiler/testData/diagnostics/tests/sealed/interfaces/sealedInterfacesDisabled.kt
// ISSUE: KT-20423
// LANGUAGE: -SealedInterfaces
// DIAGNOSTICS: -UNUSED_VARIABLE

<!UNSUPPORTED_FEATURE!>sealed<!> interface Base
